[gd_scene load_steps=3 format=3 uid="uid://dgwmxfnwdxjop"]

[ext_resource type="Script" path="res://scenes/menu/mainmenu/MainMenuScene.gd" id="1_8ob6v"]
[ext_resource type="Texture2D" uid="uid://blua5vwb07fyi" path="res://assets/sprites/ui/menu/menubackground.jpg" id="2_dgnlq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ob6v")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -216.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dgnlq")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.5
offset_right = 41.5
offset_bottom = 23.0
grow_horizontal = 2
text = "MainMenu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.5
anchor_right = 0.501
anchor_bottom = 0.5
offset_left = -141.152
offset_top = -113.0
offset_right = 140.848
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
text = "Start"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
